Update notebook for colab

--- a/notebooks/02-analysis.ipynb
+++ b/notebooks/02-analysis.ipynb
@@ -22,6 +22,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Uncomment the line below to install on Colab or similar\n",
+    "#! pip install git+https://github.com/monash-emu/wpro-working.git@pyproject"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "#| warning: false\n",
     "from jax import jit, random\n",
     "import pandas as pd\n",
@@ -87,7 +97,7 @@
     "    \"gen_mean\": {\"name\": \"Generation time mean (days)\", \"lower\": 5.0, \"upper\": 12.0},\n",
     "    \"gen_sd\": {\"name\": \"Generation time standard deviation (days)\", \"lower\": 2.0, \"upper\": 7.0},\n",
     "    \"cdr\": {\"name\": \"Case detection proportion\", \"lower\": 0.05, \"upper\": 0.4},\n",
-    "    \"seed\": {\"name\": \"Peak seed rate\", \"lower\": 5.0, \"upper\": 15.0},\n",
+    "    \"seed\": {\"name\": \"Peak seed rate\", \"lower\": 5.0, \"upper\": 12.0},\n",
     "}\n",
     "params_df = pd.DataFrame(params_dict).transpose()"
    ]
@@ -111,6 +121,15 @@
    "outputs": [],
    "source": [
     "idata = az.from_numpyro(mcmc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "az.summary(idata)"
    ]
   },
   {
