Add 3D spaghetti plot to main analysis notebook

--- a/notebooks/02-analysis.ipynb
+++ b/notebooks/02-analysis.ipynb
@@ -46,7 +46,7 @@
     "from emu_renewal.process import CosineMultiCurve\n",
     "from emu_renewal.distributions import GammaDens\n",
     "from emu_renewal.renew import RenewalModel\n",
-    "from emu_renewal.outputs import get_spaghetti_from_params, get_quant_df_from_spaghetti, plot_spaghetti, plot_uncertainty_patches, PANEL_SUBTITLES\n",
+    "from emu_renewal.outputs import get_spaghetti_from_params, get_quant_df_from_spaghetti, plot_spaghetti, plot_uncertainty_patches, PANEL_SUBTITLES, plot_3d_spaghetti\n",
     "from emu_renewal.calibration import StandardCalib"
    ]
   },
@@ -181,9 +181,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "patch_fig = plot_uncertainty_patches(quantiles_df, select_data, qual_colours.Plotly)\n",
@@ -257,7 +255,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# plot_3d_spaghetti(spaghetti, [\"susceptibles\", \"transmission potential\"])"
+   ]
   }
  ],
  "metadata": {
