Define priors with various distributions outside of calibration function

--- a/notebooks/02-analysis.ipynb
+++ b/notebooks/02-analysis.ipynb
@@ -37,6 +37,7 @@
     "import pandas as pd\n",
     "from datetime import datetime\n",
     "import numpyro\n",
+    "from numpyro import distributions as dist\n",
     "import arviz as az\n",
     "from IPython.display import Markdown\n",
     "from plotly.express.colors import qualitative as qual_colours\n",
@@ -93,13 +94,23 @@
    "outputs": [],
    "source": [
     "# Define parameter ranges\n",
-    "params_dict = {\n",
-    "    \"gen_mean\": {\"name\": \"Generation time mean (days)\", \"lower\": 5.0, \"upper\": 12.0},\n",
-    "    \"gen_sd\": {\"name\": \"Generation time standard deviation (days)\", \"lower\": 2.0, \"upper\": 7.0},\n",
-    "    \"cdr\": {\"name\": \"Case detection proportion\", \"lower\": 0.05, \"upper\": 0.4},\n",
-    "    \"seed\": {\"name\": \"Peak seed rate\", \"lower\": 5.0, \"upper\": 12.0},\n",
-    "}\n",
-    "params_df = pd.DataFrame(params_dict).transpose()"
+    "priors = {\n",
+    "    \"gen_mean\": dist.Gamma(10.0, 1.0),\n",
+    "    \"gen_sd\": dist.Gamma(5.0, 1.0),\n",
+    "    \"cdr\": dist.Beta(4.0, 10.0),\n",
+    "    \"seed\": dist.Uniform(3.0, 8.0),\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "x_vals = np.linspace(0.0, 20.0, 100)\n",
+    "pd.Series(np.diff(priors[\"seed\"].cdf(x_vals)), index=x_vals[:-1]).plot()"
    ]
   },
   {
@@ -111,7 +122,7 @@
     "kernel = numpyro.infer.NUTS(calib.calibration, dense_mass=True)\n",
     "mcmc = numpyro.infer.MCMC(kernel, num_chains=2, num_samples=1000, num_warmup=1000)\n",
     "rng_key = random.PRNGKey(1)\n",
-    "mcmc.run(rng_key, extra_fields=(\"accept_prob\",), params=params_dict)"
+    "mcmc.run(rng_key, extra_fields=(\"accept_prob\",), params=priors)"
    ]
   },
   {
@@ -206,10 +217,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "params_df.columns = [\"name\", \"Lower limit\", \"Upper limit\"]\n",
-    "params_df.index = params_df[\"name\"]\n",
-    "params_df = params_df.drop(columns=[\"name\"])\n",
-    "params_df.index.name = None"
+    "# params_df.columns = [\"name\", \"Lower limit\", \"Upper limit\"]\n",
+    "# params_df.index = params_df[\"name\"]\n",
+    "# params_df = params_df.drop(columns=[\"name\"])\n",
+    "# params_df.index.name = None"
    ]
   },
   {
@@ -236,7 +247,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Markdown(params_df.to_markdown())"
+    "# Markdown(params_df.to_markdown())"
    ]
   },
   {
@@ -245,9 +256,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "evidence_table = pd.DataFrame(index=params_df.index, columns=[\"Evidence\"])\n",
-    "evidence_table.loc[:, \"Evidence\"] = \"To be populated [@cori2013]\"\n",
-    "Markdown(evidence_table.to_markdown())"
+    "# evidence_table = pd.DataFrame(index=params_df.index, columns=[\"Evidence\"])\n",
+    "# evidence_table.loc[:, \"Evidence\"] = \"To be populated [@cori2013]\"\n",
+    "# Markdown(evidence_table.to_markdown())"
    ]
   },
   {
