First attempt at prior-posterior comparison graphing

--- a/notebooks/02-analysis.ipynb
+++ b/notebooks/02-analysis.ipynb
@@ -269,6 +269,23 @@
    "source": [
     "# plot_3d_spaghetti(spaghetti, [\"susceptibles\", \"transmission potential\"])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# First attempt at prior-posterior comparison graph\n",
+    "vars = list(priors.keys())\n",
+    "comparison_plot = az.plot_density(idata, var_names=list(priors.keys()), point_estimate=None, shade=0.5);\n",
+    "for i_ax, ax in enumerate(comparison_plot.ravel()[:len(vars)]):\n",
+    "    ax_limits = ax.get_xlim()\n",
+    "    x_vals = np.linspace(ax_limits[0], ax_limits[1], 100)\n",
+    "    y_vals = np.diff(priors[vars[i_ax]].cdf(x_vals))\n",
+    "    y_vals *= 0.94 / max(y_vals)\n",
+    "    ax.fill_between(x_vals[:-1], y_vals, color='k', alpha=0.2, linewidth=2)"
+   ]
   }
  ],
  "metadata": {
