--- a/notebooks/02-analysis.ipynb
+++ b/notebooks/02-analysis.ipynb
@@ -38,6 +38,7 @@
     "from datetime import datetime\n",
     "import numpyro\n",
     "from numpyro import distributions as dist\n",
+    "from numpyro import infer\n",
     "import arviz as az\n",
     "from IPython.display import Markdown\n",
     "from plotly.express.colors import qualitative as qual_colours\n",
@@ -98,7 +99,7 @@
     "    \"gen_mean\": dist.Gamma(10.0, 1.0),\n",
     "    \"gen_sd\": dist.Gamma(5.0, 1.0),\n",
     "    \"cdr\": dist.Beta(4.0, 10.0),\n",
-    "    \"seed\": dist.Uniform(3.0, 8.0),\n",
+    "    \"seed\": dist.Uniform(3.0, 10.0),\n",
     "}"
    ]
   },
@@ -119,7 +120,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "kernel = numpyro.infer.NUTS(calib.calibration, dense_mass=True)\n",
+    "kernel = numpyro.infer.NUTS(calib.calibration, dense_mass=True, init_strategy=infer.init_to_uniform(radius=0.5))\n",
     "mcmc = numpyro.infer.MCMC(kernel, num_chains=2, num_samples=1000, num_warmup=1000)\n",
     "rng_key = random.PRNGKey(1)\n",
     "mcmc.run(rng_key, extra_fields=(\"accept_prob\",), params=priors)"
