--- a/notebooks/03-analysis_NUTS_walkthrough.ipynb
+++ b/notebooks/03-analysis_NUTS_walkthrough.ipynb
@@ -90,8 +90,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fitter = CosineMultiCurve()\n",
-    "renew_model = RenewalModel(33e6, analysis_start, analysis_end, run_in, proc_update_freq, fitter, GammaDens(), fitter, 50)"
+    "proc_fitter = seed_fitter = CosineMultiCurve()\n",
+    "renew_model = RenewalModel(33e6, analysis_start, analysis_end, run_in, proc_update_freq, proc_fitter, GammaDens(), seed_fitter, 50)"
    ]
   },
   {
@@ -403,7 +403,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.10"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
