Fixed seeding based on first data point

--- a/notebooks/03-analysis_NUTS_walkthrough.ipynb
+++ b/notebooks/03-analysis_NUTS_walkthrough.ipynb
@@ -59,29 +59,14 @@
    "outputs": [],
    "source": [
     "# Specify fixed parameters and get calibration data\n",
-    "run_in = 30\n",
+    "run_in = 0#100\n",
     "proc_update_freq = 14\n",
     "mys_data = pd.read_csv(\"https://github.com/monash-emu/wpro_working/raw/main/data/new_cases.csv\", index_col=0)[\"MYS\"]\n",
     "mys_data.index = pd.to_datetime(mys_data.index)\n",
     "pop = 33e6\n",
-    "analysis_start = datetime(2021, 3, 1)\n",
+    "analysis_start = datetime(2021, 4, 1)\n",
     "analysis_end = datetime(2021, 11, 1)\n",
     "select_data = mys_data.loc[analysis_start: analysis_end]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Not used right now - but a possible basis for heuristic seed values\n",
-    "# Assuming a target median CDR of 0.25, and that the seed value integrates to approx (exp(seed)*run_in*0.5),\n",
-    "# (ie that our 'cosine pulse' has a mean weight of ~0.5)\n",
-    "# and that _all_ of the recorded notifications for the run_in period are seeds ie they generate no new infections\n",
-    "# at all - then this is our absolute upper limit for a seed value\n",
-    "\n",
-    "np.log((mys_data[(analysis_start-timedelta(run_in)):analysis_start].sum() / 0.25) / (run_in*0.5))"
    ]
   },
   {
@@ -100,7 +85,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "calib = StandardCalib(renew_model, mys_data)"
+    "# Define parameter ranges\n",
+    "priors = {\n",
+    "    \"gen_mean\": dist.TruncatedNormal(9.0,1.0,low=7.0, high=13.0),#dist.Gamma(10.0, 1.0),\n",
+    "    \"gen_sd\": dist.Gamma(5.0, 1.0),\n",
+    "    \"cdr\": dist.Beta(4.0, 10.0),\n",
+    "    #\"seed\": dist.Uniform(0.01, 10.0), #Approximate upper seed value (see above). Relatively insensitive to lower limit\n",
+    "}"
    ]
   },
   {
@@ -109,13 +100,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Define parameter ranges\n",
-    "priors = {\n",
-    "    \"gen_mean\": dist.Gamma(10.0, 1.0),\n",
-    "    \"gen_sd\": dist.Gamma(5.0, 1.0),\n",
-    "    \"cdr\": dist.Beta(4.0, 10.0),\n",
-    "    \"seed\": dist.Uniform(1.0, 10.0), #Approximate upper seed value (see above). Relatively insensitive to lower limit\n",
-    "}"
+    "calib = StandardCalib(renew_model, select_data, priors, 0.1,0.1)"
    ]
   },
   {
@@ -156,8 +141,8 @@
     "# 1000,1000 should be enough 'most of the time', and is useful while testing - expect a few bad runs depending on the seed\n",
     "# 2000,2000 should be considerably more robust\n",
     "# Higher values may be required for exacting results with 'pristine' r values\n",
-    "mcmc = numpyro.infer.MCMC(kernel, num_chains=4, num_samples=2000, num_warmup=2000)\n",
-    "rng_key = random.PRNGKey(14)\n",
+    "mcmc = numpyro.infer.MCMC(kernel, num_chains=3, num_samples=1000, num_warmup=1000)\n",
+    "rng_key = random.PRNGKey(2)\n",
     "#mcmc.run(rng_key, extra_fields=(\"accept_prob\",\"diverging\"), params=priors,collect_warmup=True)"
    ]
   },
@@ -172,7 +157,7 @@
     "# (eg no order of magnitude differences)\n",
     "# It's normal for runs to speed up during the warmup (as they get closer to the viable region)\n",
     "\n",
-    "mcmc.warmup(rng_key, extra_fields=(\"accept_prob\",\"diverging\",\"potential_energy\"), params=priors,collect_warmup=True)"
+    "mcmc.warmup(rng_key, extra_fields=(\"accept_prob\",\"diverging\",\"potential_energy\"), collect_warmup=True)"
    ]
   },
   {
@@ -209,7 +194,7 @@
     "# (most likely the mass matrix tuning is different for this chain; you can check the potential energy/trace\n",
     "# to validate this)\n",
     "\n",
-    "mcmc.run(rng_key, extra_fields=(\"accept_prob\",\"diverging\",\"potential_energy\"), params=priors)"
+    "mcmc.run(rng_key, extra_fields=(\"accept_prob\",\"diverging\",\"potential_energy\"))"
    ]
   },
   {
@@ -262,12 +247,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_full_result(gen_mean, gen_sd, proc, seed, cdr):\n",
+    "def get_full_result(gen_mean, gen_sd, proc, cdr):\n",
+    "    seed = calib.data[0]/cdr\n",
     "    return renew_model.renewal_func(gen_mean, gen_sd, proc, seed)\n",
     "\n",
     "full_wrap = jit(get_full_result)\n",
     "spaghetti = get_spaghetti_from_params(renew_model, sample_params, full_wrap)\n",
     "quantiles_df = get_quant_df_from_spaghetti(renew_model, spaghetti, quantiles)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "patch_fig = plot_uncertainty_patches(quantiles_df, select_data, qual_colours.Plotly)\n",
+    "patch_fig"
    ]
   },
   {
