Move Ebola data to new location and do relative load

--- a/notebooks/04-ebola-sierraleone.ipynb
+++ b/notebooks/04-ebola-sierraleone.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2ba4bbe4",
+   "id": "0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,19 +31,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4053b743",
+   "id": "1",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Grab data on 2014-2016 Ebola outbreak - this analysis we will focus on the epidemic in Seirra Leone. This data was don\n",
-    "\n",
-    "ebola_data = pd.read_csv(r'C:\\Users\\ehug0006\\emu\\wpro-working\\data\\ebola_2014_2016_clean.csv', index_col=\"Date\", parse_dates=True)"
+    "ebola_data = pd.read_csv(\"../data/ebola_2014_2016/ebola_2014_2016_clean.csv\", index_col=\"Date\", parse_dates=True)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a5ca7031",
+   "id": "2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +54,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3e4f02b1-e4fd-48ea-bb86-75b13c045222",
+   "id": "3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +64,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "13f5daf9-1bdf-401b-a24c-88bc61242523",
+   "id": "4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +74,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c0093e53-99b1-439a-a28e-dcc8bcbcd1da",
+   "id": "5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +84,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bf1fd734-473e-40dc-a5dc-8282b8de2815",
+   "id": "6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +96,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "05fab6b9-41ed-4d18-9d6e-73397c508cd3",
+   "id": "7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,7 +112,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a2478b77-9141-4dc3-9884-b7a216f44a55",
+   "id": "8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +123,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9a172536-9e90-478c-b2cd-0207af5fea8e",
+   "id": "9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,7 +133,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c5943cdf-65e2-49ca-8d8f-4374d8b0adb3",
+   "id": "10",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,7 +149,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1c08ffa9",
+   "id": "11",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,7 +162,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c0652e81",
+   "id": "12",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,7 +172,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5a58b342",
+   "id": "13",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,7 +187,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2db26502",
+   "id": "14",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,7 +202,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d0d0a890",
+   "id": "15",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,7 +212,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "renewal",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -227,7 +226,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.0"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
