--- a/notebooks/04-ebola-sierraleone.ipynb
+++ b/notebooks/04-ebola-sierraleone.ipynb
@@ -36,7 +36,7 @@
    "outputs": [],
    "source": [
     "# Grab data on 2014-2016 Ebola outbreak - this analysis we will focus on the epidemic in Seirra Leone. This data was don\n",
-    "ebola_data = pd.read_csv(\"../data/ebola_2014_2016/ebola_2014_2016_clean.csv\", index_col=\"Date\", parse_dates=True)"
+    "ebola_data = pd.read_csv(\"https://github.com/monash-emu/wpro-working/raw/more-datasets/data/ebola_2014_2016/ebola_2014_2016_clean.csv\", index_col=\"Date\", parse_dates=True)"
    ]
   },
   {
