Shorten some of the Ebola code

--- a/notebooks/04-ebola-sierraleone.ipynb
+++ b/notebooks/04-ebola-sierraleone.ipynb
@@ -36,7 +36,8 @@
    "outputs": [],
    "source": [
     "# Grab data on 2014-2016 Ebola outbreak - this analysis we will focus on the epidemic in Seirra Leone. This data was don\n",
-    "ebola_data = pd.read_csv(\"https://github.com/monash-emu/wpro-working/raw/more-datasets/data/ebola_2014_2016/ebola_2014_2016_clean.csv\", index_col=\"Date\", parse_dates=True)"
+    "ebola_data = pd.read_csv(\"https://github.com/monash-emu/wpro-working/raw/more-datasets/data/ebola_2014_2016/ebola_2014_2016_clean.csv\", index_col=\"Date\", parse_dates=True)\n",
+    "px.line(ebola_data, x=ebola_data.index, y='Cumulative no. of confirmed, probable and suspected cases', color='Country')"
    ]
   },
   {
@@ -46,57 +47,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig = px.line(ebola_data, x=ebola_data.index, y='Cumulative no. of confirmed, probable and suspected cases', color='Country')\n",
-    "\n",
-    "fig.show()"
+    "case_data = ebola_data[ebola_data['Country']=='Sierra Leone']['Cumulative no. of confirmed, probable and suspected cases'].diff().rolling(14).mean().dropna()\n",
+    "case_data.plot()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ebola_data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "case_data = ebola_data[ebola_data['Country']=='Sierra Leone']['Cumulative no. of confirmed, probable and suspected cases'].diff().rolling(14).mean().dropna()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "case_data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fig = px.line(case_data, x=case_data.index, y=case_data)\n",
-    "\n",
-    "fig.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,18 +70,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8",
+   "id": "4",
    "metadata": {},
    "outputs": [],
    "source": [
-    "fitter = CosineMultiCurve()\n",
-    "renew_model = RenewalModel(33e6, analysis_start, analysis_end, run_in, proc_update_freq, fitter, GammaDens(), fitter, 50)"
+    "proc_fitter = seed_fitter = CosineMultiCurve()\n",
+    "renew_model = RenewalModel(33e6, analysis_start, analysis_end, run_in, proc_update_freq, proc_fitter, GammaDens(), seed_fitter, 50)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9",
+   "id": "5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,7 +91,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "10",
+   "id": "6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +107,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "11",
+   "id": "7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,7 +120,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "12",
+   "id": "8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,7 +130,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "13",
+   "id": "9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,7 +145,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "14",
+   "id": "10",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,7 +160,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "15",
+   "id": "11",
    "metadata": {},
    "outputs": [],
    "source": [
