Colab preamble + jax version fix

--- a/notebooks/05-nuts-exploration.ipynb
+++ b/notebooks/05-nuts-exploration.ipynb
@@ -23,7 +23,7 @@
    "outputs": [],
    "source": [
     "# Uncomment the line below to install on Colab or similar\n",
-    "#! pip install git+https://github.com/monash-emu/wpro-working.git@pyproject"
+    "#! pip install git+https://github.com/monash-emu/wpro-working.git@more-datasets"
    ]
   },
   {
@@ -156,7 +156,7 @@
     "# 1000,1000 should be enough 'most of the time', and is useful while testing - expect a few bad runs depending on the seed\n",
     "# 2000,2000 should be considerably more robust\n",
     "# Higher values may be required for exacting results with 'pristine' r values\n",
-    "mcmc = numpyro.infer.MCMC(kernel, num_chains=4, num_samples=2000, num_warmup=2000)\n",
+    "mcmc = numpyro.infer.MCMC(kernel, num_chains=2, num_samples=1000, num_warmup=1000)\n",
     "rng_key = random.PRNGKey(14)\n",
     "#mcmc.run(rng_key, extra_fields=(\"accept_prob\",\"diverging\"), params=priors,collect_warmup=True)"
    ]
@@ -231,15 +231,6 @@
     "# not be misleading, but still not really appropriate for publication/policy advice)\n",
     "# For this kind of model, 1.00 is the target\n",
     "az.summary(idata)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from jax import numpy as jnp"
    ]
   },
   {
