--- a/notebooks/04-ebola-sierraleone.ipynb
+++ b/notebooks/04-ebola-sierraleone.ipynb
@@ -3,6 +3,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "f2c0a789",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Uncomment the line below to install on Colab or similar\n",
+    "#! pip install git+https://github.com/monash-emu/wpro-working.git@more-datasets"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "0",
    "metadata": {},
    "outputs": [],
