--- a/notebooks/03-analysis_NUTS_walkthrough.ipynb
+++ b/notebooks/03-analysis_NUTS_walkthrough.ipynb
@@ -60,13 +60,67 @@
    "source": [
     "# Specify fixed parameters and get calibration data\n",
     "run_in = 0#100\n",
-    "proc_update_freq = 14\n",
+    "proc_update_freq = 7\n",
     "mys_data = pd.read_csv(\"https://github.com/monash-emu/wpro_working/raw/main/data/new_cases.csv\", index_col=0)[\"MYS\"]\n",
     "mys_data.index = pd.to_datetime(mys_data.index)\n",
     "pop = 33e6\n",
-    "analysis_start = datetime(2021, 4, 1)\n",
+    "analysis_start = datetime(2021, 5, 1)\n",
     "analysis_end = datetime(2021, 11, 1)\n",
     "select_data = mys_data.loc[analysis_start: analysis_end]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "init_data = mys_data.loc[analysis_start-timedelta(50):analysis_start-timedelta(1)]\n",
+    "init_data.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "init_data.plot()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "select_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mys_data.plot()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def reindex_daily_cumulative(series):\n",
+    "    out_idx = pd.date_range(series.index[0],series.index[-1])\n",
+    "    out_series = pd.Series(data=series,index=out_idx)\n",
+    "    return out_series.interpolate()\n",
+    "\n",
+    "def report_gaps(series):\n",
+    "    out_idx = pd.date_range(series.index[0],series.index[-1])\n",
+    "    out_series = pd.Series(data=series,index=out_idx)\n",
+    "    return out_series.isna()"
    ]
   },
   {
@@ -91,6 +145,7 @@
     "    \"gen_sd\": dist.Gamma(5.0, 1.0),\n",
     "    \"cdr\": dist.Beta(4.0, 10.0),\n",
     "    #\"seed\": dist.Uniform(0.01, 10.0), #Approximate upper seed value (see above). Relatively insensitive to lower limit\n",
+    "    \"rt0\": dist.Normal(0.0,0.25)\n",
     "}"
    ]
   },
@@ -100,7 +155,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "calib = StandardCalib(renew_model, select_data, priors, 0.1,0.1)"
+    "from jax import numpy as jnp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "calib = StandardCalib(renew_model, select_data, priors, jnp.array(init_data))"
    ]
   },
   {
@@ -114,7 +178,7 @@
     "    x = np.linspace(p.icdf(0.001),p.icdf(0.999),100)\n",
     "    return pd.Series(data=np.exp(p.log_prob(x)),index=x)\n",
     "\n",
-    "plotpdf(priors[\"cdr\"]).plot()"
+    "#plotpdf(priors[\"cdr\"]).plot()"
    ]
   },
   {
@@ -141,7 +205,7 @@
     "# 1000,1000 should be enough 'most of the time', and is useful while testing - expect a few bad runs depending on the seed\n",
     "# 2000,2000 should be considerably more robust\n",
     "# Higher values may be required for exacting results with 'pristine' r values\n",
-    "mcmc = numpyro.infer.MCMC(kernel, num_chains=3, num_samples=1000, num_warmup=1000)\n",
+    "mcmc = numpyro.infer.MCMC(kernel, num_chains=4, num_samples=1000, num_warmup=1000)\n",
     "rng_key = random.PRNGKey(2)\n",
     "#mcmc.run(rng_key, extra_fields=(\"accept_prob\",\"diverging\"), params=priors,collect_warmup=True)"
    ]
@@ -224,6 +288,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# This should be an absolute maximum of 1.05 for any actual inference (good enough to \n",
+    "# not be misleading, but still not really appropriate for publication/policy advice)\n",
+    "# For this kind of model, 1.00 is the target\n",
+    "az.summary(idata)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "from jax import numpy as jnp"
    ]
   },
@@ -247,13 +323,52 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_full_result(gen_mean, gen_sd, proc, cdr):\n",
-    "    seed = calib.data[0]/cdr\n",
-    "    return renew_model.renewal_func(gen_mean, gen_sd, proc, seed)\n",
+    "def get_full_result(gen_mean, gen_sd, proc, cdr, rt0):\n",
+    "    return renew_model.renewal_func(gen_mean, gen_sd, proc, calib.init_data/cdr, rt0)\n",
     "\n",
     "full_wrap = jit(get_full_result)\n",
     "spaghetti = get_spaghetti_from_params(renew_model, sample_params, full_wrap)\n",
     "quantiles_df = get_quant_df_from_spaghetti(renew_model, spaghetti, quantiles)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "patch_fig = plot_uncertainty_patches(quantiles_df, select_data, qual_colours.Plotly)\n",
+    "patch_fig"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "patch_fig = plot_uncertainty_patches(quantiles_df, select_data, qual_colours.Plotly)\n",
+    "patch_fig"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "patch_fig = plot_uncertainty_patches(quantiles_df, select_data, qual_colours.Plotly)\n",
+    "patch_fig"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "patch_fig = plot_uncertainty_patches(quantiles_df, select_data, qual_colours.Plotly)\n",
+    "patch_fig"
    ]
   },
   {
