--- a/notebooks/04-ebola-sierraleone.ipynb
+++ b/notebooks/04-ebola-sierraleone.ipynb
@@ -20,7 +20,7 @@
    "source": [
     "import pandas as pd\n",
     "import plotly.express as px\n",
-    "\n",
+    "import numpy as np\n",
     "import pandas as pd\n",
     "from datetime import datetime\n",
     "import numpyro\n",
@@ -58,7 +58,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "case_data = ebola_data[ebola_data['Country']=='Sierra Leone']['Cumulative no. of confirmed, probable and suspected cases'].diff().rolling(14).mean().dropna()\n",
+    "case_data = ebola_data[ebola_data[\"Country\"] == \"Sierra Leone\"][\"Cumulative no. of confirmed, probable and suspected cases\"].diff().rolling(14).mean().dropna()\n",
     "case_data.plot()"
    ]
   },
@@ -70,8 +70,8 @@
    "outputs": [],
    "source": [
     "# Specify fixed parameters and get calibration data\n",
-    "run_in = 10\n",
     "proc_update_freq = 4\n",
+    "window_len = 14\n",
     "pop = 7.1e6\n",
     "analysis_start = ebola_data.index[0]\n",
     "analysis_end = datetime(2015, 5, 1)\n",
@@ -85,8 +85,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "proc_fitter = seed_fitter = CosineMultiCurve()\n",
-    "renew_model = RenewalModel(33e6, analysis_start, analysis_end, run_in, proc_update_freq, proc_fitter, GammaDens(), seed_fitter, 50)"
+    "# Create exponentially increasing case counts for init_duration period before analysis starts\n",
+    "# Pad with zeroes to allow looking back over the full window\n",
+    "init_duration = 14\n",
+    "exp_coeff = np.log(case_data.iloc[0]) / init_duration\n",
+    "init_series = np.concatenate([np.zeros(window_len - init_duration), np.exp(exp_coeff * np.arange(init_duration))])"
    ]
   },
   {
@@ -96,7 +99,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "calib = StandardCalib(renew_model, select_data)"
+    "fitter = CosineMultiCurve()\n",
+    "renew_model = RenewalModel(33e6, analysis_start, analysis_end, proc_update_freq, fitter, GammaDens(), 14, init_series)"
    ]
   },
   {
@@ -111,7 +115,7 @@
     "    \"gen_mean\": dist.Uniform(10.0, 14.0),\n",
     "    \"gen_sd\": dist.Uniform(3.0, 7.0),\n",
     "    \"cdr\": dist.Beta(10.0, 4.0),\n",
-    "    \"seed\": dist.Uniform(0.4, 1.5),\n",
+    "    \"rt_init\": dist.Normal(0.0, 0.25),\n",
     "}"
    ]
   },
@@ -119,6 +123,16 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "calib = StandardCalib(renew_model, priors, select_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,7 +145,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9",
+   "id": "10",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +155,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "10",
+   "id": "11",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,12 +170,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "11",
+   "id": "12",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_full_result(gen_mean, gen_sd, proc, seed, cdr):\n",
-    "    return renew_model.renewal_func(gen_mean, gen_sd, proc, seed)\n",
+    "def get_full_result(gen_mean, gen_sd, proc, cdr, rt_init):\n",
+    "    return renew_model.renewal_func(gen_mean, gen_sd, proc, cdr, rt_init)\n",
     "\n",
     "full_wrap = jit(get_full_result)\n",
     "spaghetti = get_spaghetti_from_params(renew_model, sample_params, full_wrap)\n",
@@ -171,7 +185,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "12",
+   "id": "13",
    "metadata": {},
    "outputs": [],
    "source": [
