--- a/notebooks/05-nuts-exploration.ipynb
+++ b/notebooks/05-nuts-exploration.ipynb
@@ -59,14 +59,17 @@
    "outputs": [],
    "source": [
     "# Specify fixed parameters and get calibration data\n",
-    "run_in = 30\n",
     "proc_update_freq = 14\n",
+    "init_time = 50\n",
     "mys_data = pd.read_csv(\"https://github.com/monash-emu/wpro_working/raw/main/data/new_cases.csv\", index_col=0)[\"MYS\"]\n",
     "mys_data.index = pd.to_datetime(mys_data.index)\n",
     "pop = 33e6\n",
     "analysis_start = datetime(2021, 3, 1)\n",
     "analysis_end = datetime(2021, 11, 1)\n",
-    "select_data = mys_data.loc[analysis_start: analysis_end]"
+    "init_start = analysis_start - timedelta(init_time)\n",
+    "init_end = analysis_start - timedelta(1)\n",
+    "select_data = mys_data.loc[analysis_start: analysis_end]\n",
+    "init_data = mys_data.loc[init_start: init_end]"
    ]
   },
   {
@@ -75,32 +78,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Not used right now - but a possible basis for heuristic seed values\n",
-    "# Assuming a target median CDR of 0.25, and that the seed value integrates to approx (exp(seed)*run_in*0.5),\n",
-    "# (ie that our 'cosine pulse' has a mean weight of ~0.5)\n",
-    "# and that _all_ of the recorded notifications for the run_in period are seeds ie they generate no new infections\n",
-    "# at all - then this is our absolute upper limit for a seed value\n",
-    "\n",
-    "np.log((mys_data[(analysis_start-timedelta(run_in)):analysis_start].sum() / 0.25) / (run_in*0.5))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "proc_fitter = seed_fitter = CosineMultiCurve()\n",
-    "renew_model = RenewalModel(33e6, analysis_start, analysis_end, run_in, proc_update_freq, proc_fitter, GammaDens(), seed_fitter, 50)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "calib = StandardCalib(renew_model, mys_data)"
+    "fitter = CosineMultiCurve()\n",
+    "renew_model = RenewalModel(33e6, analysis_start, analysis_end, proc_update_freq, fitter, GammaDens(), 50, init_data)"
    ]
   },
   {
@@ -114,8 +93,17 @@
     "    \"gen_mean\": dist.Gamma(10.0, 1.0),\n",
     "    \"gen_sd\": dist.Gamma(5.0, 1.0),\n",
     "    \"cdr\": dist.Beta(4.0, 10.0),\n",
-    "    \"seed\": dist.Uniform(1.0, 10.0), #Approximate upper seed value (see above). Relatively insensitive to lower limit\n",
+    "    \"rt_init\": dist.Normal(0.0, 0.25),\n",
     "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "calib = StandardCalib(renew_model, priors, mys_data)"
    ]
   },
   {
@@ -172,7 +160,7 @@
     "# (eg no order of magnitude differences)\n",
     "# It's normal for runs to speed up during the warmup (as they get closer to the viable region)\n",
     "\n",
-    "mcmc.warmup(rng_key, extra_fields=(\"accept_prob\",\"diverging\",\"potential_energy\"), params=priors,collect_warmup=True)"
+    "mcmc.warmup(rng_key, extra_fields=(\"accept_prob\", \"diverging\", \"potential_energy\"), params=priors, collect_warmup=True)"
    ]
   },
   {
@@ -253,8 +241,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_full_result(gen_mean, gen_sd, proc, seed, cdr):\n",
-    "    return renew_model.renewal_func(gen_mean, gen_sd, proc, seed)\n",
+    "def get_full_result(gen_mean, gen_sd, proc, cdr, rt_init):\n",
+    "    return renew_model.renewal_func(gen_mean, gen_sd, proc, cdr, rt_init)\n",
     "\n",
     "full_wrap = jit(get_full_result)\n",
     "spaghetti = get_spaghetti_from_params(renew_model, sample_params, full_wrap)\n",
